Update video poster

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <video class="hero-bg-video" autoplay muted loop playsinline poster="Links/ФОТО 1_10.jpg">
+        <video class="hero-bg-video" autoplay muted loop playsinline poster="sourse/poster_frame.jpg">
             <source src="sourse/GifSite.mp4" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
