--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Эkspresso | Фотокнига команды велосипедистов</title>
     <meta name="description"
         content="Фотокнига о приключениях команды велосипедистов Ekspresso. Плёночные фотографии, истории из путешествий, авторские тексты.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap" rel="stylesheet">
