--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Эkspresso | Фотокнига команды велосипедистов</title>
     <meta name="description"
         content="Фотокнига о приключениях команды велосипедистов Ekspresso. Плёночные фотографии, истории из путешествий, авторские тексты.">
-    <link rel="stylesheet" href="styles.css?v=4">
+    <link rel="stylesheet" href="styles.css?v=5">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <img class="hero-logo" src="sourse/стикер экспрессо оранж.png" alt="Влажные Годы">
+            <img class="hero-logo" src="sourse/стикер экспрессо оранж.png" alt="опа">
             <p class="hero-subtitle">Фотокнига о приключениях команды велосипедистов</p>
             <a href="https://t.me/egormenshakov" target="_blank" class="hero-cta">Приобрести книгу</a>
         </div>
@@ -60,7 +60,7 @@
                         свой след на страницах.</p>
                 </div>
                 <div class="intro-image">
-                    <img src="Links/ФОТО 1_10.jpg" alt="Обложка книги Влажные Годы" loading="lazy" decoding="async">
+                    <img src="Links/ФОТО 1_10.jpg" alt="Обложка книги" loading="lazy" decoding="async">
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
         <div class="container">
             <div class="buy-grid">
                 <div class="buy-image">
-                    <img src="Links/ПЕРЕД.jpg" alt="Книга Влажные Годы" loading="lazy" decoding="async">
+                    <img src="Links/ПЕРЕД.jpg" alt="Книга Эkspresso" loading="lazy" decoding="async">
                 </div>
                 <div class="buy-content">
                     <h2>Приобрести книгу</h2>
